создал Интерфейсы для будущих блоков досижений

--- a/src/components/moduleStyles/AchievementsBlock.module.css
+++ b/src/components/moduleStyles/AchievementsBlock.module.css
@@ -111,6 +111,8 @@
     height: 280px;
     display: flex;
     justify-content: space-between;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .card1 {
