--- a/src/app/components/moduleStyles/AchievementsBlock.module.css
+++ b/src/app/components/moduleStyles/AchievementsBlock.module.css
@@ -1,6 +1,6 @@
 .bl1 {
     width: 100%;
-    max-width: 1400px;
+    max-width: 1280px;
     height: 560px;
     background-color: black;
     border: #C13100 5px solid;
@@ -33,13 +33,13 @@
 }
 
 .br {
-    border-top-right-radius: 19px;
-    border-bottom-right-radius: 19px;
+    border-top-right-radius: 18px;
+    border-bottom-right-radius: 18px;
 }
 
 .bl {
-    border-top-left-radius: 19px;
-    border-bottom-left-radius: 19px;
+    border-top-left-radius: 18px;
+    border-bottom-left-radius: 18px;
 }
 
 .btt {
@@ -54,14 +54,15 @@
 }
 .imgGr {
     width: 100%;
-    height: auto;
+    height: 100%;
+    padding-bottom: 15px;
 }
 
 .borderRight {
-    border-right: #C13100 5px solid;
+    border-right: #C13100 8px solid;
 }
 .borderLeft {
-    border-left: #C13100 5px solid;
+    border-left: #C13100 8px solid;
 }
 
 .img2 {
@@ -74,7 +75,7 @@
 .img3 {
     object-fit: cover;
     width: 30%;
-    height: 100%;
+    height: 100px;
 }
 
 .black {
@@ -151,10 +152,11 @@
     margin-top: 20px;
     height: 280px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     overflow-x: auto;
     overflow-y: hidden;
     width: 100%;
+    max-width: 1280px;
 }
 
 .ccMobile {
@@ -172,7 +174,8 @@
 
 .card1 {
     max-width: 500px;
-    margin-right: 15px;
+    margin-right: 7px;
+    margin-left: 7px;
     width: 400px;
     height: 100%;
     border: #C13100 5px solid;
@@ -205,7 +208,9 @@
 .tt5 {
     font-weight: 500;
     color: white;
-    font-size: 25px;
+    font-size: 27px;
+    padding-top: 7px;
+    padding-bottom: 10px;
 }
 
 .blf {
@@ -242,7 +247,7 @@
     border: #C13100 1px solid;
     border-radius: 19px;
     max-width: 400px;
-    max-height: 258px;
+    max-height: 300px;
     width: 100%;
     margin-top: 25px;
 }
