--- a/src/app/components/moduleStyles/AchievementsBlock.module.css
+++ b/src/app/components/moduleStyles/AchievementsBlock.module.css
@@ -1,7 +1,7 @@
 .bl1 {
     width: 100%;
-    max-width: 1400px;
-    height: 560px;
+    max-width: 1280px;
+    height: 490px;
     background-color: black;
     border: #C13100 5px solid;
     max-height: 560px;
@@ -10,7 +10,6 @@
     justify-content: space-between;
     position: relative;
     margin-top: 25px;
-
 }
 
 .cont {
@@ -20,11 +19,14 @@
     justify-content: center;
     min-width: 90vw;
     padding: 20px;
+    padding-top: 0px;
     z-index: 100;
 }
 
 .img {
-    max-width: 861px;
+    max-width: 600px;
+    object-fit: cover;
+    background-size: center;
     height: 100%;
     max-height: 560px;
     width: auto;
@@ -33,13 +35,13 @@
 }
 
 .br {
-    border-top-right-radius: 19px;
-    border-bottom-right-radius: 19px;
+    border-top-right-radius: 18px;
+    border-bottom-right-radius: 18px;
 }
 
 .bl {
-    border-top-left-radius: 19px;
-    border-bottom-left-radius: 19px;
+    border-top-right-radius: 18px;
+    border-bottom-right-radius: 18px;
 }
 
 .btt {
@@ -53,15 +55,15 @@
 
 }
 .imgGr {
-    width: 100%;
-    height: auto;
+    height: 100%;
+    padding-bottom: 15px;
 }
 
 .borderRight {
-    border-right: #C13100 5px solid;
+    border-right: #C13100 8px solid;
 }
 .borderLeft {
-    border-left: #C13100 5px solid;
+    border-left: #C13100 8px solid;
 }
 
 .img2 {
@@ -74,7 +76,7 @@
 .img3 {
     object-fit: cover;
     width: 30%;
-    height: 100%;
+    height: 100px;
 }
 
 .black {
@@ -86,12 +88,13 @@
     color: #fff;
     width: 60%;
     min-width: max-content;
-    height: 550px;
     position: absolute;
     left: 0;
     top: 0;
     border-top-left-radius: 54px;
     border-bottom-left-radius: 54px;
+    justify-content: space-between;
+    max-width: 1280px;
 }
 
 .leftBl {
@@ -169,9 +172,10 @@
 
 .card1 {
     max-width: 500px;
-    margin-right: 15px;
+    margin-right: 7px;
+    margin-left: 7px;
     width: 400px;
-    height: 100%;
+    height: 250px;
     border: #C13100 5px solid;
     border-radius: 60px;
     transition: all 0.3s ease;
@@ -189,7 +193,7 @@
     left: 0;
     top: 0;
     width: 390px;
-    height: 270px;
+    height: 250px;
     font-size: 40px;
     font-weight: 500;
     z-index: 10;
@@ -202,7 +206,9 @@
 .tt5 {
     font-weight: 500;
     color: white;
-    font-size: 25px;
+    font-size: 27px;
+    padding-top: 7px;
+    padding-bottom: 10px;
 }
 
 .blf {
@@ -215,9 +221,9 @@
     top: 0;
     left: 0;
     width: 390px;
-    height: 270px;
+    height: 250px;
     border-radius: 54px;
-
+    max-height: 300px;
 }
 
 .rHover {
@@ -226,7 +232,7 @@
     top: 0;
     left: 0;
     width: 390px;
-    height: 270px;
+    height: 250px;
     background-color: transparent;
     transition: all 0.3s ease;
     z-index: 11;
@@ -276,7 +282,7 @@
 
     .rHover {
         width: 100%;
-        height: 270px;
+        height: 250px;
     }
 
     .tt3 {
