--- a/src/app/components/moduleStyles/AchievementsBlock.module.css
+++ b/src/app/components/moduleStyles/AchievementsBlock.module.css
@@ -115,6 +115,7 @@
     color: white;
     font-weight: 400;
     margin-bottom: 15px;
+    text-transform: uppercase;
 }
 
 .t2 {
@@ -181,6 +182,7 @@
     transition: all 0.3s ease;
     position: relative;
     user-select: none;
+    text-align: center;
 }
 
 
@@ -236,7 +238,6 @@
     background-color: transparent;
     transition: all 0.3s ease;
     z-index: 11;
-
 }
 
 .card2 {
