--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   --text-color: #FFF;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   background-image: url("/background.jpg");
   background-size: cover;
