--- a/src/shared/Field/style.css
+++ b/src/shared/Field/style.css
@@ -5,21 +5,21 @@
 
 .field .key {
     color: rgba(255, 255, 255, 0.7);
-    font-size: 30px;
+    font-size: 3rem;
 }
 
 .field .value {
-    font-size: 30px;
+    font-size: 3rem;
 }
 
 @media (max-width: 950px) {
 
     .field .key {
-        font-size: 18px;
+        font-size: 1.8rem;
     }
 
     .field .value {
-        font-size: 18px;
+        font-size: 1.8rem;
     }
 
 }
