--- a/src/widgets/Footer/style.css
+++ b/src/widgets/Footer/style.css
@@ -8,17 +8,17 @@
 }
 
 .footer-outer .text {
-    font-size: 30px;
+    font-size: 3rem;
 }
 
 @media (max-width: 950px) {
 
     .footer-outer {
-        height: 90px;
+        height: 9rem;
     }
 
     .footer-outer .text {
-        font-size: 22px;
+        font-size: 2.2rem;
     }
 
 }
