updated contact information, updated links, fixed problems with mobile version

--- a/src/shared/Field/style.css
+++ b/src/shared/Field/style.css
@@ -12,6 +12,18 @@
     font-size: 3rem;
 }
 
+@media (max-width: 1025px) {
+
+    .field .key {
+        font-size: 2.3rem;
+    }
+
+    .field .value {
+        font-size: 2.3rem;
+    }
+
+}
+
 @media (max-width: 950px) {
 
     .field .key {
