--- a/src/features/Achievement/style.css
+++ b/src/features/Achievement/style.css
@@ -47,7 +47,8 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  max-width: 40vw;
+  max-width: min(720px, 55vw);
+  max-height: 180px;
 }
 
 .achievement.outer .title {
