--- a/src/features/ContactCard/style.css
+++ b/src/features/ContactCard/style.css
@@ -31,6 +31,14 @@
     gap: 20px;
 }
 
+@media (max-width: 1025px) {
+
+    .contact-card-inner .block {
+        font-size: 2.3rem;
+    }
+
+}
+
 @media (max-width: 950px) {
 
     .contact-card-inner {
