--- a/src/shared/LinkField/style.css
+++ b/src/shared/LinkField/style.css
@@ -28,6 +28,14 @@
     transform: scale(0.6);
 }
 
+@media (max-width: 1025px) {
+
+    .link-field .title {
+        font-size: 2.3rem;
+    }
+
+}
+
 @media (max-width: 950px) {
 
     .link-field .title {
