--- a/src/features/Achievement/style.css
+++ b/src/features/Achievement/style.css
@@ -92,7 +92,8 @@
 
 .achievement-mobile-outer img {
   width: 86px;
-  height: 100px;
+  height: 100%;
+  min-height: 100px;
   object-fit: cover;
   object-position: center;
 }
@@ -104,7 +105,7 @@
   justify-content: center;
   flex: 1;
   gap: 5px;
-  height: 100px;
+  padding: 10px 0px;
 }
 
 .achievement-mobile-outer .title {
