--- a/src/shared/ArrowButton/style.css
+++ b/src/shared/ArrowButton/style.css
@@ -2,4 +2,16 @@
     background-color: var(--primary-color);
     border-radius: 50%;
     padding: 12px;
+    height: fit-content;
+    cursor: pointer;
+    transition: filter .3s;
+    user-select: none;
+}
+
+.arrow-button:hover {
+    filter: brightness(80%);
+}
+
+.arrow-button.left {
+    rotate: 180deg;
 }
