--- a/src/entities/NewsItem/style.css
+++ b/src/entities/NewsItem/style.css
@@ -6,6 +6,7 @@
     background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .news-item.compact {
